# cleaner

./: .gitignore  README.md  pyproject.toml  requirements.txt
cleaner/: __init__.py  __main__.py  interface.py  remove.py
